--- a/index.html
+++ b/index.html
@@ -1,104 +1,336 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <title>luna store</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lunatic Fashion Store | Ramadhan Elegant</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f6f6f6;
-      color: #333;
-    }
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    header {
-      background: var(--logo-color, #d2691e);
-      color: white;
-      padding: 30px;
-      text-align: center;
-    }
-
-    header img {
-      max-height: 80px;
-      display: block;
-      margin: 0 auto 10px;
-    }
-
-    section {
-      max-width: 1000px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-
-    .item {
-      display: flex;
-      gap: 20px;
-      background: white;
-      margin-bottom: 20px;
-      padding: 15px;
-      border-radius: 10px;
-    }
-
-    .item img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-
-    @media (max-width: 700px) {
-      .item {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-    }
-  </style>
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+    font-family:'Poppins',sans-serif;
+    background:#F5F1EA;
+    color:#1c2b22;
+}
+header{
+    background:#0F3D2E;
+    color:#fff;
+    padding:20px;
+    text-align:center;
+}
+header h1{
+    font-family:'Playfair Display',serif;
+    letter-spacing:3px;
+}
+nav{
+    margin-top:10px;
+}
+nav a{
+    color:#D4AF37;
+    margin:0 15px;
+    text-decoration:none;
+    font-weight:500;
+}
+.hero{
+    background:linear-gradient(rgba(15,61,46,0.8),rgba(15,61,46,0.8)),
+    url('https://images.unsplash.com/photo-1618354691373-d851c5c3a37a');
+    background-size:cover;
+    background-position:center;
+    color:#fff;
+    padding:120px 20px;
+    text-align:center;
+}
+.hero h2{
+    font-size:42px;
+    font-family:'Playfair Display',serif;
+}
+.btn{
+    background:#D4AF37;
+    padding:12px 25px;
+    color:#0F3D2E;
+    text-decoration:none;
+    border-radius:30px;
+    display:inline-block;
+    margin-top:20px;
+    font-weight:600;
+}
+.section{
+    padding:60px 20px;
+    text-align:center;
+}
+.section h2{
+    font-family:'Playfair Display',serif;
+    margin-bottom:40px;
+    color:#0F3D2E;
+}
+.products{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    gap:25px;
+}
+.card{
+    background:#fff;
+    border-radius:15px;
+    overflow:hidden;
+    box-shadow:0 10px 25px rgba(0,0,0,0.1);
+    transition:0.4s;
+    cursor:pointer;
+}
+.card:hover{
+    transform:translateY(-8px);
+}
+.card img{
+    width:100%;
+    height:280px;
+    object-fit:cover;
+}
+.card-content{
+    padding:20px;
+}
+.card h3{
+    font-family:'Playfair Display',serif;
+}
+.price{
+    color:#D4AF37;
+    font-weight:600;
+    margin:8px 0;
+}
+.badge{
+    position:absolute;
+    background:#D4AF37;
+    padding:5px 10px;
+    border-radius:20px;
+    margin:10px;
+    font-size:12px;
+}
+.promo{
+    background:#0F3D2E;
+    color:#fff;
+    padding:60px 20px;
+}
+.promo h2{
+    color:#D4AF37;
+}
+.footer{
+    background:#0F3D2E;
+    color:#fff;
+    padding:40px 20px;
+    text-align:center;
+}
+.social a{
+    color:#D4AF37;
+    margin:0 10px;
+    text-decoration:none;
+}
+.popup{
+    display:none;
+    position:fixed;
+    top:0;left:0;
+    width:100%;height:100%;
+    background:rgba(0,0,0,0.6);
+    justify-content:center;
+    align-items:center;
+}
+.popup-content{
+    background:#fff;
+    padding:30px;
+    border-radius:15px;
+    width:90%;
+    max-width:500px;
+    animation:fade 0.4s ease;
+}
+@keyframes fade{
+    from{opacity:0;transform:scale(0.8)}
+    to{opacity:1;transform:scale(1)}
+}
+.close{
+    margin-top:15px;
+    cursor:pointer;
+    font-weight:bold;
+}
+</style>
 </head>
 
 <body>
 
 <header>
-  <!-- LOGO -->
-  <img src="assets/images/logo.png" alt="Logo Toko">
-  <h1>luna store</h1>
-  <p>Toko Baju & Celana Anak</p>
+<h1>LUNATIC FASHION STORE</h1>
+<nav>
+<a href="#">Anak</a>
+<a href="#">Dewasa</a>
+<a href="#">Couple</a>
+</nav>
 </header>
 
-<section>
-  <!-- ITEM 1 -->
-  <div class="item">
-    <img src="assets/images/produk1.jpg">
-    <div>
-      <h3>Produk 1</h3>
-      <p>Deskripsi produk 1</p>
-    </div>
-  </div>
-
-  <!-- ITEM 2 -->
-  <div class="item">
-    <img src="assets/images/produk2.jpg">
-    <div>
-      <h3>Produk 2</h3>
-      <p>Deskripsi produk 2</p>
-    </div>
-  </div>
-
-  <!-- Ulangi sampai produk 10 -->
+<section class="hero">
+<h2>Ramadhan Elegant Collection 2026</h2>
+<p>Elegance in Every Thread — Koleksi Keluarga Eksklusif</p>
+<a href="#best" class="btn">Belanja Sekarang</a>
 </section>
 
-<footer>
-  © luna store
+<!-- BEST SELLER -->
+<section class="section" id="best">
+<h2>Best Seller & Produk Unggulan</h2>
+<div class="products">
+
+<div class="card" onclick="showDetail('Gamis Emerald Premium','Rp 349.000','Gamis hijau emerald berbahan satin premium, nyaman dan mewah untuk Ramadhan.')">
+<span class="badge">BEST SELLER</span>
+<img src="https://images.unsplash.com/photo-1602810319073-4c5f1f4d8e92">
+<div class="card-content">
+<h3>Gamis Emerald Premium</h3>
+<p class="price">Rp 349.000</p>
+<p>Tampil anggun & elegan.</p>
+</div>
+</div>
+
+<div class="card" onclick="showDetail('Couple Ramadhan Gold','Rp 599.000','Set couple eksklusif dengan detail bordir emas.')">
+<span class="badge">UNGGULAN</span>
+<img src="https://images.unsplash.com/photo-1593032465171-8a4db3bdf09f">
+<div class="card-content">
+<h3>Couple Ramadhan Gold</h3>
+<p class="price">Rp 599.000</p>
+<p>Serasi & mewah untuk pasangan.</p>
+</div>
+</div>
+
+</div>
+</section>
+
+<!-- GAMIS COLLECTION -->
+<section class="section">
+<h2>Gamis Collection</h2>
+<div class="products">
+
+<div class="card" onclick="showDetail('Gamis Cream Gold','Rp 329.000','Desain minimalis dengan sentuhan emas premium.')">
+<img src="https://images.unsplash.com/photo-1618354691454-61e4f74c461a">
+<div class="card-content">
+<h3>Gamis Cream Gold</h3>
+<p class="price">Rp 329.000</p>
+<p>Simple & classy.</p>
+</div>
+</div>
+
+<div class="card" onclick="showDetail('Gamis Sage Elegant','Rp 339.000','Bahan adem dan flowy, cocok untuk ibadah & acara.')">
+<img src="https://images.unsplash.com/photo-1620799139834-6b8f844c5b7d">
+<div class="card-content">
+<h3>Gamis Sage Elegant</h3>
+<p class="price">Rp 339.000</p>
+<p>Nyaman & modern.</p>
+</div>
+</div>
+
+<div class="card" onclick="showDetail('Family Set Cream','Rp 799.000','Set keluarga 3–4 orang dengan warna senada.')">
+<img src="https://images.unsplash.com/photo-1622467827417-bbe2237067a5">
+<div class="card-content">
+<h3>Family Set Cream</h3>
+<p class="price">Rp 799.000</p>
+<p>Serasi untuk Hari Raya.</p>
+</div>
+</div>
+
+<div class="card" onclick="showDetail('Gamis Luxury Gold','Rp 379.000','Detail bordir emas mewah & eksklusif.')">
+<img src="https://images.unsplash.com/photo-1621955964441-c173e01c1354">
+<div class="card-content">
+<h3>Gamis Luxury Gold</h3>
+<p class="price">Rp 379.000</p>
+<p>Premium look.</p>
+</div>
+</div>
+
+</div>
+</section>
+
+<!-- CELANA ANAK -->
+<section class="section">
+<h2>Koleksi Celana Anak (8–12 Tahun)</h2>
+<div class="products">
+
+<div class="card" onclick="showDetail('Celana Anak Premium','Rp 199.000','Nyaman, bahan adem & tidak panas.')">
+<img src="https://images.unsplash.com/photo-1622830143853-6b8e2e1c5b2a">
+<div class="card-content">
+<h3>Celana Anak Premium</h3>
+<p class="price">Rp 199.000</p>
+<p>Kualitas terbaik untuk si kecil.</p>
+</div>
+</div>
+
+<div class="card" onclick="showDetail('Celana Anak Casual','Rp 189.000','Desain modern & fleksibel.')">
+<img src="https://images.unsplash.com/photo-1621006402297-7e7d3e1c4c9b">
+<div class="card-content">
+<h3>Celana Anak Casual</h3>
+<p class="price">Rp 189.000</p>
+<p>Nyaman dipakai sehari-hari.</p>
+</div>
+</div>
+
+<div class="card" onclick="showDetail('Celana Anak Ramadhan','Rp 209.000','Model eksklusif edisi Ramadhan.')">
+<img src="https://images.unsplash.com/photo-1621400582924-3c0d7e5a8f2c">
+<div class="card-content">
+<h3>Celana Anak Ramadhan</h3>
+<p class="price">Rp 209.000</p>
+<p>Elegant & stylish.</p>
+</div>
+</div>
+
+<div class="card" onclick="showDetail('Celana Anak Formal','Rp 219.000','Cocok untuk acara formal & Hari Raya.')">
+<img src="https://images.unsplash.com/photo-1618354691536-0e97d5f6b4a8">
+<div class="card-content">
+<h3>Celana Anak Formal</h3>
+<p class="price">Rp 219.000</p>
+<p>Tampil rapi & percaya diri.</p>
+</div>
+</div>
+
+</div>
+</section>
+
+<!-- PROMO -->
+<section class="promo">
+<h2>🌙 Promo Spesial Ramadhan 🌙</h2>
+<p>Diskon hingga 25% untuk Family Set</p>
+<p>Gratis Ongkir seluruh Indonesia*</p>
+<p>Bonus Hijab Exclusive untuk pembelian di atas 500rb</p>
+</section>
+
+<footer class="footer">
+<h3>Alamat Toko</h3>
+<p>Jl. Raya Fashion No. 123, Jakarta Selatan, Indonesia</p>
+
+<h3>Follow Us</h3>
+<div class="social">
+<a href="#">Facebook</a>
+<a href="#">Instagram</a>
+<a href="#">TikTok</a>
+<a href="#">WhatsApp</a>
+</div>
+
+<p>© 2026 Lunatic Fashion Store</p>
 </footer>
+
+<!-- POPUP -->
+<div class="popup" id="popup">
+<div class="popup-content">
+<h2 id="title"></h2>
+<p id="price"></p>
+<p id="desc"></p>
+<button class="btn">Pesan Sekarang</button>
+<div class="close" onclick="closePopup()">Tutup</div>
+</div>
+</div>
+
+<script>
+function showDetail(t,p,d){
+document.getElementById('title').innerText=t
+document.getElementById('price').innerText=p
+document.getElementById('desc').innerText=d
+document.getElementById('popup').style.display='flex'
+}
+function closePopup(){
+document.getElementById('popup').style.display='none'
+}
+</script>
 
 </body>
 </html>
