--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@ nav a{
 <p>Elegance in Every Thread — Koleksi Keluarga Eksklusif</p>
 <a href="#best" class="btn">Belanja Sekarang</a>
 </section>
+    <!-- PROMO -->
+<section class="promo">
+<h2>🌙 Promo Spesial Ramadhan 🌙</h2>
+<p>Diskon hingga 25% untuk Family Set</p>
+<p>Gratis Ongkir seluruh Indonesia*</p>
+<p>Bonus Hijab Exclusive untuk pembelian di atas 500rb</p>
+</section>
 
 <!-- BEST SELLER -->
 <section class="section" id="best">
