--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ nav a{
 
 <div class="card" onclick="showDetail('Couple Ramadhan Gold','Rp 599.000','Set couple eksklusif dengan detail bordir emas.')">
 <span class="badge">UNGGULAN</span>
-<img src="https://images.unsplash.com/photo-1593032465171-8a4db3bdf09f">
+<img src="assets/images/couple.best.jpg">
 <div class="card-content">
 <h3>Couple Ramadhan Gold</h3>
 <p class="price">Rp 599.000</p>
