--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ nav a{
 
 <div class="card" onclick="showDetail('Gamis Emerald Premium','Rp 349.000','Gamis hijau emerald berbahan satin premium, nyaman dan mewah untuk Ramadhan.')">
 <span class="badge">BEST SELLER</span>
-<img src="https://images.unsplash.com/photo-1602810319073-4c5f1f4d8e92">
+<img src="assets/images/gamishijab.png">
 <div class="card-content">
 <h3>Gamis Emerald Premium</h3>
 <p class="price">Rp 349.000</p>
@@ -220,7 +220,7 @@ nav a{
 </div>
 
 <div class="card" onclick="showDetail('Gamis Sage Elegant','Rp 339.000','Bahan adem dan flowy, cocok untuk ibadah & acara.')">
-<img src="https://images.unsplash.com/photo-1620799139834-6b8f844c5b7d">
+<img src="assets/images/produk_unggulan1.png">
 <div class="card-content">
 <h3>Gamis Sage Elegant</h3>
 <p class="price">Rp 339.000</p>
@@ -229,7 +229,7 @@ nav a{
 </div>
 
 <div class="card" onclick="showDetail('Family Set Cream','Rp 799.000','Set keluarga 3–4 orang dengan warna senada.')">
-<img src="https://images.unsplash.com/photo-1622467827417-bbe2237067a5">
+<img src="assets/images/produk_unggulan2.png">
 <div class="card-content">
 <h3>Family Set Cream</h3>
 <p class="price">Rp 799.000</p>
@@ -238,7 +238,7 @@ nav a{
 </div>
 
 <div class="card" onclick="showDetail('Gamis Luxury Gold','Rp 379.000','Detail bordir emas mewah & eksklusif.')">
-<img src="https://images.unsplash.com/photo-1621955964441-c173e01c1354">
+<img src="assets/images/couple_produk.png">
 <div class="card-content">
 <h3>Gamis Luxury Gold</h3>
 <p class="price">Rp 379.000</p>
@@ -249,13 +249,13 @@ nav a{
 </div>
 </section>
 
-<!-- CELANA ANAK -->
+<!-- CELANA ANAK & dewasa -->
 <section class="section">
 <h2>Koleksi Celana Anak (8–12 Tahun)</h2>
 <div class="products">
 
 <div class="card" onclick="showDetail('Celana Anak Premium','Rp 199.000','Nyaman, bahan adem & tidak panas.')">
-<img src="https://images.unsplash.com/photo-1622830143853-6b8e2e1c5b2a">
+<img src="assets/images/celana.anak.png">
 <div class="card-content">
 <h3>Celana Anak Premium</h3>
 <p class="price">Rp 199.000</p>
@@ -264,7 +264,7 @@ nav a{
 </div>
 
 <div class="card" onclick="showDetail('Celana Anak Casual','Rp 189.000','Desain modern & fleksibel.')">
-<img src="https://images.unsplash.com/photo-1621006402297-7e7d3e1c4c9b">
+<img src="assets/images/celana.deawasa.png">
 <div class="card-content">
 <h3>Celana Anak Casual</h3>
 <p class="price">Rp 189.000</p>
@@ -273,7 +273,7 @@ nav a{
 </div>
 
 <div class="card" onclick="showDetail('Celana Anak Ramadhan','Rp 209.000','Model eksklusif edisi Ramadhan.')">
-<img src="https://images.unsplash.com/photo-1621400582924-3c0d7e5a8f2c">
+<img src="assets/images/celana.deawasa2.png">
 <div class="card-content">
 <h3>Celana Anak Ramadhan</h3>
 <p class="price">Rp 209.000</p>
@@ -282,7 +282,7 @@ nav a{
 </div>
 
 <div class="card" onclick="showDetail('Celana Anak Formal','Rp 219.000','Cocok untuk acara formal & Hari Raya.')">
-<img src="https://images.unsplash.com/photo-1618354691536-0e97d5f6b4a8">
+<img src="assets/images/celana.deawasa.png">
 <div class="card-content">
 <h3>Celana Anak Formal</h3>
 <p class="price">Rp 219.000</p>
