--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ nav a{
 
 <!-- CELANA ANAK & dewasa -->
 <section class="section">
-<h2>Koleksi Celana Anak (8–12 Tahun)</h2>
+<h2>Koleksi Celana Anak & dewass</h2>
 <div class="products">
 
 <div class="card" onclick="showDetail('Celana Anak Premium','Rp 199.000','Nyaman, bahan adem & tidak panas.')">
@@ -303,14 +303,14 @@ nav a{
 
 <footer class="footer">
 <h3>Alamat Toko</h3>
-<p>Jl. Raya Fashion No. 123, Jakarta Selatan, Indonesia</p>
+<p>Jl. Raya wonopringgo  No. 11,wonopringgo-pekalongan, Indonesia</p>
 
 <h3>Follow Us</h3>
 <div class="social">
-<a href="#">Facebook</a>
-<a href="#">Instagram</a>
-<a href="#">TikTok</a>
-<a href="#">WhatsApp</a>
+<a href="#">Facebook : lunatic fashion store</a>
+<a href="#">Instagram : lunaticfashionS</a>
+<a href="#">TikTok : lunatic FashionS</a>
+<a href="#">WhatsApp : 082322021086</a>
 </div>
 
 <p>© 2026 Lunatic Fashion Store</p>
