--- a/index.html
+++ b/index.html
@@ -3,59 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lunatic Fashion Store</title>
+<title>Ramadhan Luxury Collection</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-body{
-font-family:'Poppins',sans-serif;
-background:#f7f5f0;
-color:#222;
-}
+body{font-family:'Poppins',sans-serif;background:#0f2e24;color:#f5f1e6}
 
 /* HEADER */
 header{
-position:sticky;top:0;z-index:1000;
 display:flex;justify-content:space-between;align-items:center;
-padding:20px 8%;
-background:#fff;
-box-shadow:0 10px 25px rgba(0,0,0,.06);
+padding:20px 8%;background:#133d2e;
+position:sticky;top:0;z-index:1000;
+box-shadow:0 5px 20px rgba(0,0,0,.3)
 }
+
 .logo{
 font-family:'Playfair Display',serif;
-font-size:28px;
+font-size:26px;font-weight:700;
 background:linear-gradient(90deg,#c6a75e,#fff3c4,#c6a75e);
 background-size:200%;
 -webkit-background-clip:text;
 color:transparent;
-animation:shimmer 3s linear infinite;
+animation:shimmer 4s linear infinite
 }
+
 @keyframes shimmer{
 0%{background-position:-200%}
 100%{background-position:200%}
 }
-.cart{
-cursor:pointer;
-position:relative;
-}
-.cart span{
-position:absolute;
-top:-8px;right:-10px;
-background:gold;color:black;
-padding:3px 6px;
-border-radius:50%;
-font-size:12px;
+
+.cart-btn{cursor:pointer;position:relative}
+.cart-count{
+position:absolute;top:-8px;right:-10px;
+background:#c6a75e;color:#000;
+font-size:12px;padding:4px 7px;border-radius:50%
 }
 
 /* HERO */
 .hero{
-height:80vh;
-background:linear-gradient(rgba(0,60,40,.6),rgba(0,60,40,.6)),
-url("https://images.unsplash.com/photo-1520975869019-70f3c2d6f6a4") center/cover;
+height:85vh;
+background:url('https://images.unsplash.com/photo-1544441893-675973e31985') center/cover;
 display:flex;align-items:center;justify-content:center;
-text-align:center;color:white;
+text-align:center
 }
 .hero h1{
 font-family:'Playfair Display',serif;
@@ -63,101 +54,119 @@ font-size:52px;
 background:linear-gradient(90deg,#c6a75e,#fff3c4,#c6a75e);
 -webkit-background-clip:text;
 color:transparent;
-animation:shimmer 4s infinite linear;
+animation:shimmer 5s linear infinite
 }
 
 /* SECTION */
-section{padding:80px 8%}
 .section-title{
 text-align:center;
-font-family:'Playfair Display',serif;
-font-size:36px;
-margin-bottom:50px;
-color:#184c3c;
+font-family:'Playfair Display';
+font-size:34px;
+margin:80px 0 40px;
+color:#fff3c4
 }
 
-/* PRODUCTS */
 .products{
+padding:0 8% 60px;
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:30px;
+grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+gap:25px
 }
-.product{
-background:#fff;
-border-radius:16px;
-overflow:hidden;
-box-shadow:0 15px 35px rgba(0,0,0,.08);
-transition:.4s;
-cursor:pointer;
-}
-.product:hover{transform:translateY(-10px)}
-.product img{
-width:100%;height:300px;object-fit:cover;
-}
-.product-info{padding:20px}
-.product-info h3{
-font-family:'Playfair Display',serif;
-margin-bottom:10px;
-}
-.product-info p{font-size:14px;color:#777}
-.price{color:#c6a75e;font-weight:600;margin:10px 0}
-.btn{
-display:inline-block;
-padding:8px 18px;
-border-radius:30px;
-border:none;
-background:#184c3c;
-color:white;
-cursor:pointer;
-transition:.3s;
-}
-.btn:hover{background:#c6a75e;color:black}
 
-/* POPUP DETAIL */
-.popup,.cart-popup,.image-viewer{
-position:fixed;top:0;left:0;
-width:100%;height:100%;
-background:rgba(0,0,0,.8);
-display:none;
-align-items:center;justify-content:center;
-z-index:3000;
-}
-.popup-box{
-background:white;
-width:80%;max-width:900px;
-border-radius:20px;
+.product{
+background:#1b4b3a;
+border-radius:15px;
 overflow:hidden;
-display:flex;
-animation:fade .4s ease;
+box-shadow:0 10px 30px rgba(0,0,0,.4);
+transition:.3s;
+cursor:pointer
 }
-.popup-box img{width:50%;object-fit:cover}
-.popup-content{padding:30px}
+.product:hover{transform:translateY(-8px)}
+
+.product img{
+width:100%;height:280px;object-fit:cover
+}
+
+.product-info{padding:18px}
+.product-info h3{
+font-family:'Playfair Display';
+margin-bottom:8px;
+color:#fff3c4
+}
+.product-info p{font-size:14px;color:#e8dcc6}
+.price{margin-top:8px;color:#c6a75e;font-weight:600}
+
+.add-cart{
+margin-top:12px;padding:8px 18px;
+background:#c6a75e;color:#000;
+border:none;border-radius:25px;
+cursor:pointer;font-weight:500
+}
+.add-cart:hover{background:#fff3c4}
+
+/* POPUP */
+.popup,.cart-popup,.image-viewer{
+position:fixed;top:0;left:0;width:100%;height:100%;
+background:rgba(0,0,0,.85);
+display:none;justify-content:center;align-items:center;
+z-index:3000
+}
+.popup-content{
+background:#f5f1e6;color:#000;
+border-radius:15px;
+display:flex;width:80%;max-width:900px;
+animation:fadeIn .4s ease
+}
+.popup-content img{width:50%;object-fit:cover}
+.popup-details{padding:30px}
 .close{
-position:absolute;top:20px;right:30px;
-font-size:35px;color:white;cursor:pointer;
+position:absolute;top:30px;right:50px;
+font-size:40px;color:#fff;cursor:pointer
 }
-@keyframes fade{
-from{opacity:0;transform:scale(.8)}
+
+@keyframes fadeIn{
+from{opacity:0;transform:scale(.9)}
 to{opacity:1;transform:scale(1)}
 }
 
-/* FULLSCREEN IMAGE */
+/* FULLSCREEN */
 .image-viewer img{
 max-width:90%;max-height:90%;
-border-radius:20px;
-box-shadow:0 0 50px rgba(198,167,94,.6);
+border-radius:15px;
+box-shadow:0 0 50px rgba(198,167,94,.8)
 }
 
+/* PROMO */
+.promo{
+background:#133d2e;
+padding:80px 8%;
+text-align:center
+}
+.promo h2{
+font-family:'Playfair Display';
+font-size:40px;
+color:#fff3c4;
+margin-bottom:20px
+}
+.promo p{max-width:700px;margin:auto;color:#e8dcc6}
+
 /* MAP */
+.map-section{padding:80px 8%;text-align:center}
 iframe{
-width:100%;height:400px;border:none;border-radius:20px;
-box-shadow:0 10px 30px rgba(0,0,0,.1);
+width:100%;height:400px;border:none;
+border-radius:15px;
+box-shadow:0 10px 30px rgba(0,0,0,.4)
 }
 
 /* FOOTER */
 footer{
-background:#184c3c;color:white;
-text-align:center;padding:25px;
+background:#0c221a;
+padding:40px;text-align:center;
+color:#e8dcc6
+}
+.socials a{
+margin:0 10px;color:#c6a75e;
+text-decoration:none;font-weight:500
 }
 </style>
 </head>
@@ -165,94 +174,105 @@ text-align:center;padding:25px;
 <body>
 
 <header>
-<div class="logo">Lunatic Fashion Store</div>
-<div class="cart" onclick="openCart()">🛒 Cart <span id="cartCount">0</span></div>
+<div class="logo">Ramadhan Luxury Store</div>
+<div class="cart-btn" onclick="openCart()">🛒
+<span class="cart-count" id="cartCount">0</span>
+</div>
 </header>
 
-<div class="hero">
-<h1>Ramadhan Luxury Collection</h1>
-</div>
-
-<section>
-<h2 class="section-title">Gamis Collection</h2>
-<div class="products">
-
-<div class="product">
-<img src="https://images.unsplash.com/photo-1520975916090-3105956dac38"
-onclick="viewImage(event,this.src)">
-<div class="product-info">
-<h3>Gamis Emerald Gold</h3>
-<p>Bahan satin premium, flowy & elegan</p>
-<div class="price">Rp 450.000</div>
-<button class="btn" onclick="addToCart(event)">Add to Cart</button>
-</div>
-</div>
-
-<div class="product">
-<img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f"
-onclick="viewImage(event,this.src)">
-<div class="product-info">
-<h3>Gamis Cream Luxury</h3>
-<p>Nuansa Ramadhan elegan</p>
-<div class="price">Rp 480.000</div>
-<button class="btn" onclick="addToCart(event)">Add to Cart</button>
-</div>
-</div>
-
-</div>
+<section class="hero">
+<h1>Ramadhan Sale 2026</h1>
 </section>
 
-<section>
-<h2 class="section-title">Celana Anak</h2>
-<div class="products">
+<h2 class="section-title">✨ Best Seller & Produk Unggulan</h2>
+<section class="products">
+
+<!-- 2 BEST SELLER -->
+<div class="product">
+<img src="https://images.unsplash.com/photo-1520975916090-3105956dac38" onclick="viewImage(event,this.src)">
+<div class="product-info">
+<h3>Gamis Emerald Royal</h3>
+<p>Bahan premium satin silk, limited edition Ramadhan.</p>
+<div class="price">Rp 520.000</div>
+<button class="add-cart" onclick="addToCart(event)">Add to Cart</button>
+</div>
+</div>
 
 <div class="product">
-<img src="https://images.unsplash.com/photo-1602810319428-019690571b5b"
-onclick="viewImage(event,this.src)">
+<img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f" onclick="viewImage(event,this.src)">
 <div class="product-info">
-<h3>Celana Anak Casual</h3>
-<p>Usia 8–12 tahun, nyaman</p>
-<div class="price">Rp 120.000</div>
-<button class="btn" onclick="addToCart(event)">Add to Cart</button>
+<h3>Couple Ramadhan Gold</h3>
+<p>Set couple eksklusif untuk keluarga harmonis.</p>
+<div class="price">Rp 890.000</div>
+<button class="add-cart" onclick="addToCart(event)">Add to Cart</button>
 </div>
 </div>
 
-</div>
 </section>
 
-<section>
-<h2 class="section-title">Alamat Toko</h2>
+<h2 class="section-title">🌙 Gamis Collection</h2>
+<section class="products">
+
+<!-- 4 GAMIS -->
+<script>
+const gamisPrices=[450000,480000,500000,470000];
+</script>
+
+<div class="product"><img src="https://images.unsplash.com/photo-1544441893-675973e31985" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Olive Luxury</h3><p>Desain elegan hijau tua sentuhan emas.</p><div class="price">Rp 450.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+<div class="product"><img src="https://images.unsplash.com/photo-1602810318383-e386cc2a3ccf" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Cream Elegant</h3><p>Tampilan soft cream dengan detail bordir emas.</p><div class="price">Rp 480.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+<div class="product"><img src="https://images.unsplash.com/photo-1524253482453-3fed8d2fe12b" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Dark Emerald</h3><p>Model premium untuk acara spesial Ramadhan.</p><div class="price">Rp 500.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+<div class="product"><img src="https://images.unsplash.com/photo-1520974735194-4c5f9f6d0f7e" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Couple Family</h3><p>Set keluarga premium look exclusive.</p><div class="price">Rp 470.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+</section>
+
+<h2 class="section-title">👦 Koleksi Celana Anak</h2>
+<section class="products">
+
+<div class="product"><img src="https://images.unsplash.com/photo-1600185365483-26d7a4cc7519" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Premium</h3><p>Nyaman untuk ibadah & silaturahmi.</p><div class="price">Rp 180.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+<div class="product"><img src="https://images.unsplash.com/photo-1602810318383-e386cc2a3ccf" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Elegant</h3><p>Model slim fit modern.</p><div class="price">Rp 170.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+<div class="product"><img src="https://images.unsplash.com/photo-1593032465171-8f1f1d0c1b75" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Casual</h3><p>Bahan adem & tidak panas.</p><div class="price">Rp 165.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+<div class="product"><img src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Couple</h3><p>Serasi dengan ayah & ibu.</p><div class="price">Rp 190.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
+
+</section>
+
+<section class="promo">
+<h2>🎉 Ramadhan Sale Spesial</h2>
+<p>Dapatkan diskon hingga 30% untuk pembelian Gamis, Couple Set & Koleksi Anak.  
+Promo berlaku selama bulan Ramadhan. Stok terbatas!</p>
+</section>
+
+<section class="map-section">
+<h2 class="section-title">📍 Alamat Toko</h2>
+<p>Jl. Raya Ramadhan No. 123, Jakarta Selatan</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126922.9937902093!2d106.689429!3d-6.229386"></iframe>
 </section>
 
 <footer>
-© 2026 Lunatic Fashion Store — Elegant • Luxury • Trusted
-</footer>
-
-<!-- IMAGE VIEWER -->
-<div class="image-viewer" id="imageViewer" onclick="closeImage()">
-<img id="fullImage">
+<p>Follow Us:</p>
+<div class="socials">
+<a href="#">Facebook</a> |
+<a href="#">Instagram</a> |
+<a href="#">TikTok</a> |
+<a href="#">WhatsApp</a>
 </div>
+<p>© 2026 Ramadhan Luxury Store</p>
+</footer>
 
 <script>
 let cart=0;
-function addToCart(e){
-e.stopPropagation();
-cart++;
-document.getElementById("cartCount").innerText=cart;
-}
-function openCart(){
-alert("Total item di keranjang: "+cart);
-}
-function viewImage(e,src){
-e.stopPropagation();
-document.getElementById("imageViewer").style.display="flex";
-document.getElementById("fullImage").src=src;
-}
-function closeImage(){
-document.getElementById("imageViewer").style.display="none";
-}
+function addToCart(e){e.stopPropagation();cart++;document.getElementById("cartCount").innerText=cart;}
+function openCart(){alert("Total item: "+cart);}
+function viewImage(e,src){e.stopPropagation();document.querySelector(".image-viewer").style.display="flex";document.querySelector(".image-viewer img").src=src;}
+function closeImage(){document.querySelector(".image-viewer").style.display="none";}
 </script>
+
+<div class="image-viewer" onclick="closeImage()"><img></div>
 
 </body>
 </html>
