--- a/index.html
+++ b/index.html
@@ -3,276 +3,287 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ramadhan Luxury Collection</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+<title>Lunatic Fashion Store | Ramadhan Elegant</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Poppins',sans-serif;background:#0f2e24;color:#f5f1e6}
+:root{
+--green:#0f2f25;
+--cream:#f6f1e8;
+--gold:#d4af37;
+}
 
-/* HEADER */
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif}
+
+body{
+background:var(--cream);
+color:#333;
+}
+
 header{
-display:flex;justify-content:space-between;align-items:center;
-padding:20px 8%;background:#133d2e;
-position:sticky;top:0;z-index:1000;
-box-shadow:0 5px 20px rgba(0,0,0,.3)
+background:var(--green);
+color:white;
+padding:15px 20px;
+display:flex;
+justify-content:space-between;
+align-items:center;
+position:sticky;
+top:0;
+z-index:999;
 }
 
 .logo{
-font-family:'Playfair Display',serif;
-font-size:26px;font-weight:700;
-background:linear-gradient(90deg,#c6a75e,#fff3c4,#c6a75e);
-background-size:200%;
--webkit-background-clip:text;
-color:transparent;
-animation:shimmer 4s linear infinite
+font-size:22px;
+font-weight:bold;
+color:var(--gold);
 }
 
-@keyframes shimmer{
-0%{background-position:-200%}
-100%{background-position:200%}
+.cart{
+cursor:pointer;
+background:var(--gold);
+color:black;
+padding:8px 12px;
+border-radius:20px;
+font-weight:bold;
 }
 
-.cart-btn{cursor:pointer;position:relative}
-.cart-count{
-position:absolute;top:-8px;right:-10px;
-background:#c6a75e;color:#000;
-font-size:12px;padding:4px 7px;border-radius:50%
-}
-
-/* HERO */
 .hero{
-height:85vh;
-background:url('https://images.unsplash.com/photo-1544441893-675973e31985') center/cover;
-display:flex;align-items:center;justify-content:center;
-text-align:center
-}
-.hero h1{
-font-family:'Playfair Display',serif;
-font-size:52px;
-background:linear-gradient(90deg,#c6a75e,#fff3c4,#c6a75e);
--webkit-background-clip:text;
-color:transparent;
-animation:shimmer 5s linear infinite
-}
-
-/* SECTION */
-.section-title{
+background:linear-gradient(rgba(15,47,37,0.8),rgba(15,47,37,0.8)),
+url('https://images.unsplash.com/photo-1602810318383-e386cc2a3ccf');
+background-size:cover;
+background-position:center;
+color:white;
 text-align:center;
-font-family:'Playfair Display';
-font-size:34px;
-margin:80px 0 40px;
-color:#fff3c4
+padding:100px 20px;
 }
 
-.products{
-padding:0 8% 60px;
+.hero h1{
+font-size:32px;
+margin-bottom:10px;
+}
+
+.section{
+padding:40px 20px;
+}
+
+.section h2{
+text-align:center;
+color:var(--green);
+margin-bottom:25px;
+}
+
+.grid{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-gap:25px
+grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
+gap:15px;
 }
 
-.product{
-background:#1b4b3a;
-border-radius:15px;
+.card{
+background:white;
+border-radius:12px;
 overflow:hidden;
-box-shadow:0 10px 30px rgba(0,0,0,.4);
-transition:.3s;
-cursor:pointer
-}
-.product:hover{transform:translateY(-8px)}
-
-.product img{
-width:100%;height:280px;object-fit:cover
+box-shadow:0 5px 15px rgba(0,0,0,0.1);
+position:relative;
+transition:0.3s;
 }
 
-.product-info{padding:18px}
-.product-info h3{
-font-family:'Playfair Display';
+.card:hover{
+transform:translateY(-5px);
+}
+
+.card img{
+width:100%;
+height:200px;
+object-fit:cover;
+cursor:pointer;
+}
+
+.card-body{
+padding:12px;
+}
+
+.card-body h3{
+font-size:14px;
+margin-bottom:5px;
+}
+
+.price{
+color:var(--green);
+font-weight:bold;
 margin-bottom:8px;
-color:#fff3c4
-}
-.product-info p{font-size:14px;color:#e8dcc6}
-.price{margin-top:8px;color:#c6a75e;font-weight:600}
-
-.add-cart{
-margin-top:12px;padding:8px 18px;
-background:#c6a75e;color:#000;
-border:none;border-radius:25px;
-cursor:pointer;font-weight:500
-}
-.add-cart:hover{background:#fff3c4}
-
-/* POPUP */
-.popup,.cart-popup,.image-viewer{
-position:fixed;top:0;left:0;width:100%;height:100%;
-background:rgba(0,0,0,.85);
-display:none;justify-content:center;align-items:center;
-z-index:3000
-}
-.popup-content{
-background:#f5f1e6;color:#000;
-border-radius:15px;
-display:flex;width:80%;max-width:900px;
-animation:fadeIn .4s ease
-}
-.popup-content img{width:50%;object-fit:cover}
-.popup-details{padding:30px}
-.close{
-position:absolute;top:30px;right:50px;
-font-size:40px;color:#fff;cursor:pointer
 }
 
-@keyframes fadeIn{
-from{opacity:0;transform:scale(.9)}
-to{opacity:1;transform:scale(1)}
+button{
+background:var(--green);
+color:white;
+border:none;
+padding:8px;
+width:100%;
+border-radius:6px;
+cursor:pointer;
 }
 
-/* FULLSCREEN */
-.image-viewer img{
-max-width:90%;max-height:90%;
-border-radius:15px;
-box-shadow:0 0 50px rgba(198,167,94,.8)
+button:hover{
+background:var(--gold);
+color:black;
 }
 
-/* PROMO */
-.promo{
-background:#133d2e;
-padding:80px 8%;
-text-align:center
-}
-.promo h2{
-font-family:'Playfair Display';
-font-size:40px;
-color:#fff3c4;
-margin-bottom:20px
-}
-.promo p{max-width:700px;margin:auto;color:#e8dcc6}
-
-/* MAP */
-.map-section{padding:80px 8%;text-align:center}
-iframe{
-width:100%;height:400px;border:none;
-border-radius:15px;
-box-shadow:0 10px 30px rgba(0,0,0,.4)
+.sale{
+background:var(--green);
+color:white;
+text-align:center;
+padding:30px;
+margin-top:40px;
 }
 
-/* FOOTER */
+.shimmer{
+position:relative;
+overflow:hidden;
+}
+
+.shimmer::before{
+content:"";
+position:absolute;
+top:0;
+left:-75%;
+width:50%;
+height:100%;
+background:linear-gradient(120deg,transparent,rgba(255,215,0,0.6),transparent);
+animation:shine 3s infinite;
+}
+
+@keyframes shine{
+100%{left:125%}
+}
+
 footer{
-background:#0c221a;
-padding:40px;text-align:center;
-color:#e8dcc6
+background:var(--green);
+color:white;
+padding:20px;
+text-align:center;
 }
-.socials a{
-margin:0 10px;color:#c6a75e;
-text-decoration:none;font-weight:500
+
+.popup{
+position:fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:rgba(0,0,0,0.7);
+display:none;
+justify-content:center;
+align-items:center;
+z-index:9999;
+}
+
+.popup-content{
+background:white;
+padding:20px;
+border-radius:12px;
+max-width:90%;
+max-height:90%;
+overflow:auto;
+text-align:center;
+}
+
+.popup-content img{
+width:100%;
+max-height:400px;
+object-fit:cover;
+margin-bottom:15px;
+}
+
+.close{
+position:absolute;
+top:20px;
+right:30px;
+font-size:30px;
+color:white;
+cursor:pointer;
+}
+
+iframe{
+width:100%;
+height:300px;
+border:none;
+margin-top:20px;
 }
 </style>
 </head>
-
 <body>
 
 <header>
-<div class="logo">Ramadhan Luxury Store</div>
-<div class="cart-btn" onclick="openCart()">🛒
-<span class="cart-count" id="cartCount">0</span>
-</div>
+<div class="logo">Lunatic Fashion Store</div>
+<div class="cart" onclick="openCart()">Keranjang (<span id="cart-count">0</span>)</div>
 </header>
 
-<section class="hero">
-<h1>Ramadhan Sale 2026</h1>
+<section class="hero shimmer">
+<h1>Ramadhan Elegant Collection</h1>
+<p>Elegan • Mewah • Berkelas</p>
 </section>
 
-<h2 class="section-title">✨ Best Seller & Produk Unggulan</h2>
-<section class="products">
+<section class="section">
+<h2>Best Seller & Unggulan</h2>
+<div class="grid">
 
-<!-- 2 BEST SELLER -->
-<div class="product">
-<img src="https://images.unsplash.com/photo-1520975916090-3105956dac38" onclick="viewImage(event,this.src)">
-<div class="product-info">
-<h3>Gamis Emerald Royal</h3>
-<p>Bahan premium satin silk, limited edition Ramadhan.</p>
-<div class="price">Rp 520.000</div>
-<button class="add-cart" onclick="addToCart(event)">Add to Cart</button>
+<div class="card">
+<img src="https://images.unsplash.com/photo-1600180758890-6b94519a8ba7" onclick="openPopup(this.src,'Gamis Royal Emerald','Gamis premium elegan warna hijau emerald dengan aksen gold','Rp 399.000')">
+<div class="card-body">
+<h3>Gamis Royal Emerald</h3>
+<div class="price">Rp 399.000</div>
+<button onclick="addToCart()">Tambah ke Keranjang</button>
 </div>
 </div>
 
-<div class="product">
-<img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f" onclick="viewImage(event,this.src)">
-<div class="product-info">
+<div class="card">
+<img src="https://images.unsplash.com/photo-1585487000160-6ebcfceb0d03" onclick="openPopup(this.src,'Couple Ramadhan Gold','Set couple mewah kombinasi cream & gold','Rp 599.000')">
+<div class="card-body">
 <h3>Couple Ramadhan Gold</h3>
-<p>Set couple eksklusif untuk keluarga harmonis.</p>
-<div class="price">Rp 890.000</div>
-<button class="add-cart" onclick="addToCart(event)">Add to Cart</button>
+<div class="price">Rp 599.000</div>
+<button onclick="addToCart()">Tambah ke Keranjang</button>
 </div>
 </div>
 
-</section>
-
-<h2 class="section-title">🌙 Gamis Collection</h2>
-<section class="products">
-
-<!-- 4 GAMIS -->
-<script>
-const gamisPrices=[450000,480000,500000,470000];
-</script>
-
-<div class="product"><img src="https://images.unsplash.com/photo-1544441893-675973e31985" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Olive Luxury</h3><p>Desain elegan hijau tua sentuhan emas.</p><div class="price">Rp 450.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-<div class="product"><img src="https://images.unsplash.com/photo-1602810318383-e386cc2a3ccf" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Cream Elegant</h3><p>Tampilan soft cream dengan detail bordir emas.</p><div class="price">Rp 480.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-<div class="product"><img src="https://images.unsplash.com/photo-1524253482453-3fed8d2fe12b" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Dark Emerald</h3><p>Model premium untuk acara spesial Ramadhan.</p><div class="price">Rp 500.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-<div class="product"><img src="https://images.unsplash.com/photo-1520974735194-4c5f9f6d0f7e" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Gamis Couple Family</h3><p>Set keluarga premium look exclusive.</p><div class="price">Rp 470.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-</section>
-
-<h2 class="section-title">👦 Koleksi Celana Anak</h2>
-<section class="products">
-
-<div class="product"><img src="https://images.unsplash.com/photo-1600185365483-26d7a4cc7519" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Premium</h3><p>Nyaman untuk ibadah & silaturahmi.</p><div class="price">Rp 180.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-<div class="product"><img src="https://images.unsplash.com/photo-1602810318383-e386cc2a3ccf" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Elegant</h3><p>Model slim fit modern.</p><div class="price">Rp 170.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-<div class="product"><img src="https://images.unsplash.com/photo-1593032465171-8f1f1d0c1b75" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Casual</h3><p>Bahan adem & tidak panas.</p><div class="price">Rp 165.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-<div class="product"><img src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7" onclick="viewImage(event,this.src)"><div class="product-info"><h3>Celana Anak Couple</h3><p>Serasi dengan ayah & ibu.</p><div class="price">Rp 190.000</div><button class="add-cart" onclick="addToCart(event)">Add to Cart</button></div></div>
-
-</section>
-
-<section class="promo">
-<h2>🎉 Ramadhan Sale Spesial</h2>
-<p>Dapatkan diskon hingga 30% untuk pembelian Gamis, Couple Set & Koleksi Anak.  
-Promo berlaku selama bulan Ramadhan. Stok terbatas!</p>
-</section>
-
-<section class="map-section">
-<h2 class="section-title">📍 Alamat Toko</h2>
-<p>Jl. Raya Ramadhan No. 123, Jakarta Selatan</p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126922.9937902093!2d106.689429!3d-6.229386"></iframe>
-</section>
-
-<footer>
-<p>Follow Us:</p>
-<div class="socials">
-<a href="#">Facebook</a> |
-<a href="#">Instagram</a> |
-<a href="#">TikTok</a> |
-<a href="#">WhatsApp</a>
 </div>
-<p>© 2026 Ramadhan Luxury Store</p>
-</footer>
+</section>
+
+<section class="section">
+<h2>Gamis Collection</h2>
+<div class="grid">
 
 <script>
-let cart=0;
-function addToCart(e){e.stopPropagation();cart++;document.getElementById("cartCount").innerText=cart;}
-function openCart(){alert("Total item: "+cart);}
-function viewImage(e,src){e.stopPropagation();document.querySelector(".image-viewer").style.display="flex";document.querySelector(".image-viewer img").src=src;}
-function closeImage(){document.querySelector(".image-viewer").style.display="none";}
+let gamis=[
+["Gamis Olive Luxe","Rp 349.000"],
+["Gamis Cream Shimmer","Rp 359.000"],
+["Gamis Emerald Silk","Rp 379.000"],
+["Gamis Moonlight Gold","Rp 389.000"]
+];
+
+gamis.forEach(g=>{
+document.write(`
+<div class="card">
+<img src="https://source.unsplash.com/400x400/?gamis,fashion" onclick="openPopup(this.src,'${g[0]}','Gamis elegan untuk Ramadhan & Lebaran','${g[1]}')">
+<div class="card-body">
+<h3>${g[0]}</h3>
+<div class="price">${g[1]}</div>
+<button onclick="addToCart()">Tambah ke Keranjang</button>
+</div>
+</div>
+`);
+});
 </script>
 
-<div class="image-viewer" onclick="closeImage()"><img></div>
+</div>
+</section>
 
-</body>
-</html>
+<section class="section">
+<h2>Koleksi Celana Anak (8-12 Tahun)</h2>
+<div class="grid">
+
+<script>
+let anak=[
+["Celana Kids Olive","Rp 179.000"],
+["Celana Kids Cream","Rp 169.000"],
+["Celana Kids Casual","Rp 159.000"],
+["Celana Kids Elegant","Rp 189.000"]
+]
+
